Deployment/pdv-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdv-backend-deployment
spec:
  selector:
    matchLabels:
      app: pdv-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: pdv-backend
    spec:
      containers:
        - name: pdv-backend
          image: juanmartincandela/pdv-backend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: photos-storage
              mountPath: /app/photos
      volumes:
        - name: photos-storage
          persistentVolumeClaim:
            claimName: photos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pdv-backend-svc
spec:
  selector:
    app: pdv-backend
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
