Deployment/pdv-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pdv-frontend
  name: pdv-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdv-frontend
  template:
    metadata:
      labels:
        app: pdv-frontend
    spec:
      containers:
      - image: jmarcan286/pdv-frontend:latest
        name: pdv-frontend
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: pdv-frontend-svc
spec:
  selector:
    app: pdv-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
