Deployment/pdv-oauth2-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdv-oauth2-server-deployment
spec:
  selector:
    matchLabels:
      app: pdv-oauth2
  replicas: 1
  template:
    metadata:
      labels:
        app: pdv-oauth2
    spec:
      containers:
        - name: pdv-oauth2
          image: juanmartincandela/pdv-oauth2:latest
          ports:
            - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: pdv-oauth2-svc
spec:
  selector:
    app: pdv-oauth2
  ports:
    - protocol: "TCP"
      port: 9999
      targetPort: 9999
