Deployment/pdv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdv-ingress
spec:
  rules:
  - host: portaldelviajero.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pdv-frontend-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/pdv-backend"
        backend:
          service:
            name: pdv-backend-svc
            port:
              number: 8080
      - pathType: Prefix
        path: "/oauth2"
        backend:
          service:
            name: pdv-oauth2-svc
            port:
              number: 9999
